Resolved conflicting merge of alignment changes - MANKARAN

--- a/magenta-simple/core/css/server.css
+++ b/magenta-simple/core/css/server.css
@@ -1322,30 +1322,25 @@ input[type="checkbox"].checkbox+label:before:hover {
     background-color: unset !important;
 }
 
-<<<<<<< HEAD
 
  /* #filestable tbody tr:active {
     background-color: #f0f7e0 !important;
 }  */
-=======
+
 #filestable tbody tr:active {
     background-color: #f0f7e0 !important;
 }
->>>>>>> f7f0de433e09a81789eeee05f738eb4ba3db53e2
 
 #filestable tbody tr.canDrop {
     background-color: #f0f7e0 !important;
 }
 
-<<<<<<< HEAD
 #filestable .headerSelection input[type='checkbox'].checkbox+label:before{
     margin: 0 3px 3px 3px;
     }
     
 #filestable tbody tr:active, 
-=======
 #filestable tbody tr:active,
->>>>>>> f7f0de433e09a81789eeee05f738eb4ba3db53e2
 #filestable tbody tr.highlighted,
 #filestable tbody tr.highlighted .name:focus,
 #filestable tbody tr.selected,
@@ -1395,7 +1390,7 @@ input[type="checkbox"].checkbox+label:before:hover {
 }
 
 #filestable th .columntitle.name {
-    margin-left: 68px !important;
+    margin-left: 65px !important;
 }
 
 #filestable tbody {
@@ -1410,10 +1405,6 @@ input[type="checkbox"].checkbox+label:before:hover {
     width: 55px;
     height: 55px;
 } */
-
-#headerSelection label {
-    margin-left: 7px;
-}
 
 .column-selection input[type="checkbox"].checkbox:checked+label:before {
     background-color: #73C354 !important;
